[tool.poetry]
name = "genmod"
version = "3.7.4"
description = "Tool for annotating patterns of genetic inheritance in Variant Call Format (VCF) files"
authors = ["moonso <mans.magnusson@scilifelab.se>"]
license = "MIT"
include = ["CHANGELOG.md", "examples/*", "genmod/annotations/*.gz", "genmod/annotations/*.gz", "genmod/configs/*.ini"]

[tool.poetry.dependencies]
python = "^3.6"
ped_parser = "^1.6.6"
pytabix = "^0.1"
interval_tree = "^0.3.4"
click = "^7.1.2"
configobj = "^5.0.6"
intervaltree = "^3.1.0"
extract_vcf = "^0.5"

[tool.poetry.scripts]
genmod = "genmod.commands_base:cli"

[tool.black]
line-length = 100

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
